--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
   },
   "homepage": "https://github.com/Mr-Antivirus/viralcss#readme",
   "devDependencies": {
+    "browser-sync": "^2.16.1",
     "gulp": "^3.9.1",
+    "gulp-chmod": "^1.3.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
-    "node-sass": "^3.10.0"
+    "gulp-util": "^3.0.7",
+    "node-sass": "^3.10.1"
   }
 }
